--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:fix": "ng lint --fix"
+    "lint:fix": "ng lint --fix",
+    "start:backend": "cd backend/ && npm start",
+    "start:all": "npm start & npm run start:backend"
   },
   "private": true,
   "dependencies": {
