--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,7 +5,7 @@
   "singleQuote": true,
   "printWidth": 100,
   "trailingComma": "all",
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "overrides": [
     {
       "files": "index.html",
